# stuff

./: .gitignore  LICENSE.md  README.md
bootstrap/: Makefile  Makefile.tools  README.md  minimal.zsh-theme
c/c_hardway/: Makefile  ex10_2.c  ex11.c  ex12.c  ex14.c  ex16.c  ex16b.c  ex17  ex17.c  ex17b.c  ex18.c  ex4b.c  ex6.c  ex7.c  ex8.c
c/linked_list/: README.md  main.c
cloud-init/: create-user.yml
cs50/week1/: Makefile  credit.c  hello.c  mario.c
cs50/week2/: .gitgnore  Makefile  buggy.c  string.c  string_test.c  test_substitution.sh
golang/: append_to_slice.go  arrays_and_slices_1.go  functions.go  functions_2.go  interfaces.go  json_1.go  pointers_2.go  range_list_of_int.go  removing_from_slice.go  slice_and_functions.go  slice_literal.go  slices_and_make_1.go
golang/aws/: dynamodb_add_item_to_table.go  dynamodb_create_table.go
golang/context-example/: go.mod  main.go
golang/examples/: anon_func.go  compare_lists.go  envs.go  func_in_variable.go  func_takes_func.go  func_that_return_func.go  functions_1.go  json_marshal_1.go  json_unmarshal.go  json_unmarshal_1.go  maps_1.go  methods_1.go  pointers_1.go  pointers_example1.go  removing_elements_slice.go  simple_struct.go  slice_of_strings.go  struct_person.go
java/udemy-java-masterclass/: shell.nix
labs-enviroment/: README.md
labs-enviroment/grafana-lgtm/: alloy-podlogs.yaml  (+7 more)
pulumi/: README.md
pyslack/: pyslack.py
python/: file_open.py
rust/example_web_request/: Cargo.toml
rust/example_web_request/src/: main.rs
rust/projects/example_web_request/: Cargo.toml
rust/projects/example_web_request/src/: main.rs
sandbox/: README.md
(+184 files in other folders)
