[package]
name = "example_web_request"
version = "0.1.0"
authors = ["Fernando Alexandre <jfernandoalex@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: hyper is getting 1.0 ready so upgrade
hyper = { version = "^0.14", features = ["full"], crate-type = ["staticlib"] }
hyper-tls = { version= "^0.5.0", crate-type = ["staticlib"] }

tokio = { version = "^1", features = ["full"] }
serde_derive = "^1.0.125"
serde = "^1.0.125"
bytes = "^1.0.1"
serde_json = "^1.0.64"
