[package]
name = "example_web_request"
version = "0.1.0"
authors = ["Fernando Alexandre <jfernandoalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# default-features = false
# Was hitting a problem with "ld: framework not found Security", setting this solved the problem
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
