[package]
name = "example_web_request"
version = "0.1.0"
authors = ["Fernando Alexandre <jfernandoalex@gmail.com>"]
edition = "2018"

[dependencies]
# default-features = false
# Was hitting a problem with "ld: framework not found Security", setting this solved the problem
# This also disable https support here
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
